--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Fancystacks/Speakeasy-Authentication#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "node-json-db": "^1.1.0",
     "speakeasy": "^2.0.0",
     "uuid": "^8.3.2"
   }
